// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Single Code Tab Transformer wraps single code blocks with tabs if they have a lang set 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "className": "tab-panel",
          "data": Object {
            "hName": "code",
            "hProperties": Object {
              "lang": "javascript",
              "meta": null,
            },
          },
          "lang": "javascript",
          "meta": null,
          "type": "code",
          "value": "const languageSet = true;",
        },
      ],
      "className": "tabs",
      "data": Object {
        "hName": "div",
        "hProperties": Object {
          "className": Array [
            "code-tabs",
          ],
        },
      },
      "type": "code-tabs",
    },
  ],
  "type": "root",
}
`;

exports[`Single Code Tab Transformer wraps single code blocks with tabs if they have a title set 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "className": "tab-panel",
          "data": Object {
            "hName": "code",
            "hProperties": Object {
              "lang": "javascript",
              "meta": "Testing",
            },
          },
          "lang": "javascript",
          "meta": "Testing",
          "type": "code",
          "value": "const languageSet = true;",
        },
      ],
      "className": "tabs",
      "data": Object {
        "hName": "div",
        "hProperties": Object {
          "className": Array [
            "code-tabs",
          ],
        },
      },
      "type": "code-tabs",
    },
  ],
  "type": "root",
}
`;
